# Web-Auditor

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  __init__.py  client.py  http_server_source.py  inference.py  openenv.yaml  push_log.txt  pyproject.toml  remotes.txt  test_logic.py
openenv_web_auditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  requirements.txt  web_auditor_environment.py
server/template_site/: contact.html  index.html
server/working_directory_b8659b6a-8e4d-49fa-83d4-551b9b9ede87/: gallery.html
